tests/errors/compiler/bad_param_in_stand_func/void_in_exp.c
int main()
{
	void a;
	float b, c;
	
	b = 1;
	c = exp(a);
	print(c);
	
	return 0;
}